; ModuleID = '/home/carl/AnghaBench/postgres/src/test/regress/extr_pg_regress.c_replace_string.c'
source_filename = "/home/carl/AnghaBench/postgres/src/test/regress/extr_pg_regress.c_replace_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @replace_string(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  br label %9

9:                                                ; preds = %14, %3
  %10 = load i8*, i8** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i8* @strstr(i8* %10, i8* %11)
  store i8* %12, i8** %7, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %45

14:                                               ; preds = %9
  %15 = load i8*, i8** %4, align 8
  %16 = call i8* @pg_strdup(i8* %15)
  store i8* %16, i8** %8, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = ptrtoint i8* %19 to i64
  %22 = ptrtoint i8* %20 to i64
  %23 = sub i64 %21, %22
  %24 = add nsw i64 %23, 1
  %25 = trunc i64 %24 to i32
  %26 = call i32 @strlcpy(i8* %17, i8* %18, i32 %25)
  %27 = load i8*, i8** %4, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @strcat(i8* %27, i8* %28)
  %30 = load i8*, i8** %4, align 8
  %31 = load i8*, i8** %8, align 8
  %32 = load i8*, i8** %7, align 8
  %33 = load i8*, i8** %4, align 8
  %34 = ptrtoint i8* %32 to i64
  %35 = ptrtoint i8* %33 to i64
  %36 = sub i64 %34, %35
  %37 = getelementptr inbounds i8, i8* %31, i64 %36
  %38 = load i8*, i8** %5, align 8
  %39 = call i32 @strlen(i8* %38)
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i8, i8* %37, i64 %40
  %42 = call i32 @strcat(i8* %30, i8* %41)
  %43 = load i8*, i8** %8, align 8
  %44 = call i32 @free(i8* %43)
  br label %9

45:                                               ; preds = %9
  ret void
}

declare dso_local i8* @strstr(i8*, i8*) #1

declare dso_local i8* @pg_strdup(i8*) #1

declare dso_local i32 @strlcpy(i8*, i8*, i32) #1

declare dso_local i32 @strcat(i8*, i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
